--- a/task4.html
+++ b/task4.html
@@ -3,6 +3,9 @@
 <head>
     <title>Dynamic List</title>
     <style>
+        body{
+            background-color: bisque;
+        }
          button {
     font-size: 20px; /* Increase text size */
     border-radius: 10px; /* Optional: Rounded corners */
