--- a/task1.html
+++ b/task1.html
@@ -11,6 +11,9 @@
     color: black;
     cursor: pointer;
 }
+button :hover{
+    background-color: transparent;
+}
 
 /* Centering the button */
 .container {
@@ -18,6 +21,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh; /* Full height of the viewport */
+    
 }
 
     </style>
