--- a/task2.html
+++ b/task2.html
@@ -3,6 +3,7 @@
 <head>
     <title>Click Counter</title>
     <style>
+
          button {
     font-size: 20px; /* Increase text size */
     padding: 15px 30px; /* Increase button size */
@@ -10,10 +11,14 @@
     background-color: #007bff;
     color: black;
     cursor: pointer;
-}
-h2{
+  }
+  h2{
     font-size: 30px;
-}
+  }
+  body{
+    background-color: palegoldenrod;
+  }
+
 
 /* Centering the button */
 .container {
